--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>chiroito.sample.ee</groupId>
     <artifactId>weblogic-jee-quckstart</artifactId>
@@ -17,6 +18,8 @@
         <version.war.plugin>3.0.0</version.war.plugin>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <weblogic.user>weblogic</weblogic.user>
+        <weblogic.password>welcome1</weblogic.password>
     </properties>
 
     <modules>
@@ -55,13 +58,13 @@
 
     <build>
         <pluginManagement>
-        <plugins>
+            <plugins>
                 <!-- WebLogic plug-in -->
-            <plugin>
-                <groupId>com.oracle.weblogic</groupId>
-                <artifactId>weblogic-maven-plugin</artifactId>
-                <version>${version.wls.maven.plugin}</version>
-            </plugin>
+                <plugin>
+                    <groupId>com.oracle.weblogic</groupId>
+                    <artifactId>weblogic-maven-plugin</artifactId>
+                    <version>${version.wls.maven.plugin}</version>
+                </plugin>
 
                 <!-- Java EE archive plug-in -->
                 <plugin>
@@ -97,11 +100,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>com.oracle.weblogic</groupId>
-                <artifactId>weblogic-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
     </build>
 </project>
