--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -8,6 +8,7 @@
         <groupId>chiroito.sample.ee</groupId>
         <artifactId>weblogic-jee-quckstart</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>weblogic-ear</artifactId>
     <packaging>ear</packaging>
@@ -36,12 +37,15 @@
             <plugin>
                 <groupId>com.oracle.weblogic</groupId>
                 <artifactId>weblogic-maven-plugin</artifactId>
-                <configuration>
-                    <user>${weblogic.user}</user>
-                    <password>${weblogic.password}</password>
-                    <name>${project.build.finalName}</name>
-                    <source>${project.build.directory}/${project.build.finalName}.${project.packaging}</source>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>wls-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
