--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -9,6 +9,7 @@
         <groupId>chiroito.sample.ee</groupId>
         <artifactId>weblogic-jee-quckstart</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>weblogic-ejb</artifactId>
@@ -18,6 +19,7 @@
         <dependency>
             <groupId>com.oracle.weblogic</groupId>
             <artifactId>weblogic-server-pom</artifactId>
+            <version>${version.wls.server.pom}</version>
             <type>pom</type>
         </dependency>
     </dependencies>
