--- a/web/pom.xml
+++ b/web/pom.xml
@@ -9,6 +9,7 @@
         <groupId>chiroito.sample.ee</groupId>
         <artifactId>weblogic-jee-quckstart</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>weblogic-web</artifactId>
@@ -36,6 +37,22 @@
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
             </plugin>
+            <!-- If you would like to deploy 'WAR',  you remove comment  following <plugin> tag and remove ear and ejb. -->
+            <!--
+            <plugin>
+                <groupId>com.oracle.weblogic</groupId>
+                <artifactId>weblogic-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>wls-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
         </plugins>
     </build>
 </project>
