--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -10,11 +10,13 @@
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+
     <artifactId>weblogic-ear</artifactId>
     <packaging>ear</packaging>
     <name>WebLogic JEE QuickStart - ear</name>
 
     <dependencies>
+        <!-- Application -->
         <dependency>
             <groupId>chiroito.sample.ee</groupId>
             <artifactId>weblogic-web</artifactId>
@@ -25,28 +27,41 @@
             <artifactId>weblogic-ejb</artifactId>
             <type>ejb</type>
         </dependency>
+
     </dependencies>
 
     <build>
         <finalName>${project.parent.artifactId}</finalName>
         <plugins>
+            <!-- Building application -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
             </plugin>
+
+            <!-- Action to WebLogic Server -->
             <plugin>
                 <groupId>com.oracle.weblogic</groupId>
                 <artifactId>weblogic-maven-plugin</artifactId>
                 <executions>
+                    <execution>
+                        <id>wls-deploy-before-it</id>
+                    </execution>
+                    <execution>
+                        <id>wls-undeploy-after-it</id>
+                    </execution>
                     <execution>
                         <id>wls-deploy</id>
                         <phase>deploy</phase>
                         <goals>
                             <goal>deploy</goal>
                         </goals>
+                        <configuration>
+                            <adminurl>t3://${prodServer}</adminurl>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 </project>
