--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,42 +17,58 @@
     <name>WebLogic JEE QuickStart - web</name>
 
     <dependencies>
+        <!-- Application -->
         <dependency>
             <groupId>chiroito.sample.ee</groupId>
             <artifactId>weblogic-ejb</artifactId>
             <type>ejb</type>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Testing framework -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-wls-remote-rest</artifactId>
+        </dependency>
+
+        <!-- WebLogic -->
         <dependency>
             <groupId>com.oracle.weblogic</groupId>
             <artifactId>weblogic-server-pom</artifactId>
             <type>pom</type>
-            <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
         <plugins>
+            <!-- Building application -->
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
             </plugin>
-            <!-- If you would like to deploy 'WAR',  you remove comment  following <plugin> tag and remove ear and ejb. -->
-            <!--
+
+            <!-- Action to WebLogic Server -->
             <plugin>
                 <groupId>com.oracle.weblogic</groupId>
                 <artifactId>weblogic-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>wls-deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
+                        <id>wls-deploy-before-it</id>
+                    </execution>
+                    <execution>
+                        <id>wls-undeploy-after-it</id>
                     </execution>
                 </executions>
             </plugin>
-            -->
+
         </plugins>
     </build>
 </project>
